-Plus d'attaque, c'est un jeu de hyppies pacifistes maintenant.

--- a/Have2fly/Have2fly.vcxproj
+++ b/Have2fly/Have2fly.vcxproj
@@ -41,6 +41,7 @@
     <None Include="..\src\action\active\y\AutoGun.hh" />
     <None Include="..\src\action\active\y\GunJump.hh" />
     <None Include="..\src\action\active\y\ThrowBall.hh" />
+    <None Include="..\src\action\Dummy.hh" />
     <None Include="..\src\action\IAction.hh" />
     <None Include="..\src\action\PassiveAction.hh" />
     <None Include="..\src\action\passive\Death.hh" />
