--- a/Have2fly/Have2fly.vcxproj
+++ b/Have2fly/Have2fly.vcxproj
@@ -232,11 +232,15 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <PreprocessorDefinitions>WIN32;_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)\src;$(SolutionDir)\src\util;$(SolutionDir)\src\throw;$(SolutionDir)\src\menu;$(SolutionDir)\src\math;$(SolutionDir)\src\input;$(SolutionDir)\src\human;$(SolutionDir)\src\hit;$(SolutionDir)\src\graphics;$(SolutionDir)\src\game;$(SolutionDir)\src\action;$(SolutionDir)\src\action\passive;$(SolutionDir)\src\action\active;$(SolutionDir)\src\action\active\y;$(SolutionDir)\src\action\active\x;$(SolutionDir)\src\action\active\b;$(SolutionDir)\src\action\active\a;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;pthreadVC2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
